--- a/Client/views/index.ejs
+++ b/Client/views/index.ejs
@@ -65,12 +65,45 @@
                            typeahead="suggestion for suggestion in getSuggestionsForField($viewValue, 'author_suggest') | filter:$viewValue">
                   </div>
 
+                  <div class="container-fluid">
+
+                    <div class="row">
+                      &nbsp;
+                    </div>
+
+                    <div class="row">
+
+                      <div class="col-md-6 text-right">
+                        <label>
+                          <input type="radio"
+                                 name="changesets_operator"
+                                 checked
+                                 value="AND"
+                                 ng-model="changesetSearchTemplate.query.query_string.default_operator">AND Conditions
+                        </label>
+                      </div>
+
+                      <div class="col-md-6 text-left">
+                        <label>
+                          <input type="radio"
+                                 name="changesets_operator"
+                                 value="OR"
+                                 ng-model="changesetSearchTemplate.query.query_string.default_operator">OR Conditions
+                        </label>
+                      </div>
+
+                    </div>
+
+                  </div>
+
                   <hr>
 
                   <div class="input-group">
                     <span class="input-group-addon"># Search Results:</span>
                     <input type="text" class="form-control" placeholder="25" ng-model="changesetSearchParams.numResults">
                   </div>
+
+                  &nbsp;
 
                 </div>
 
@@ -111,6 +144,30 @@
                   <div class="input-group">
                     <span class="input-group-addon bg-info">Comments:</span>
                     <input type="text" class="form-control" placeholder="...">
+                  </div>
+
+                  <div class="container-fluid">
+
+                    <div class="row">
+                      &nbsp;
+                    </div>
+
+                    <div class="row">
+
+                      <div class="col-md-6 text-right">
+                        <label>
+                          <input type="radio" name="contents_operator" checked>AND Conditions
+                        </label>
+                      </div>
+
+                      <div class="col-md-6 text-left">
+                        <label>
+                          <input type="radio" name="contents_operator">OR Conditions
+                        </label>
+                      </div>
+
+                    </div>
+
                   </div>
 
                   <hr>
