Show that zero matches were returned in the search results panel title.

--- a/Client/views/index.ejs
+++ b/Client/views/index.ejs
@@ -205,6 +205,9 @@
               <span ng-show="searchResults.total > 0">
                 (showing {{searchResults.hits.length}} of {{searchResults.total}} matches)
               </span>
+              <span ng-show="searchResults.total === 0">
+                (0 matches)
+              </span>
             </h3>
           </div>
 
