Use two search buttons on the client which invokes different methods on the current scope to allow implementing searching of file contents and changesets.

--- a/Client/views/index.ejs
+++ b/Client/views/index.ejs
@@ -105,6 +105,10 @@
 
                   &nbsp;
 
+                  <div style="text-align:center;">
+                    <button type="button" class="btn btn-default" ng-click="searchChangesetsButtonClicked()">Search</button>
+                  </div>
+
                 </div>
 
               </div>
@@ -176,6 +180,13 @@
                     <span class="input-group-addon"># Search Results:</span>
                     <input type="text" class="form-control" placeholder="25">
                   </div>
+
+                  &nbsp;
+
+                  <div style="text-align:center;">
+                    <button type="button" class="btn btn-default" ng-click="searchContentsButtonClicked()">Search</button>
+                  </div>
+
                 </div>
 
               </div>
@@ -183,10 +194,6 @@
             </tab>
 
           </tabset>
-
-          <div style="text-align:center;">
-            <button type="button" class="btn btn-default" ng-click="searchButtonClicked()">Search</button>
-          </div>
 
           &nbsp;
 
