Update the list of possible search fields for file contents now that the initial design of the file contents index is somewhat stable.
Need to increase the min width of the input-group-addon CSS class to ensure
that the "File Contents" search field is aligned with the other inputs.

--- a/Client/views/index.ejs
+++ b/Client/views/index.ejs
@@ -130,25 +130,9 @@
                     <input type="text" class="form-control" placeholder="...">
                   </div>
                   <div class="input-group">
-                    <span class="input-group-addon bg-info">Types:</span>
+                    <span class="input-group-addon">File Contents:</span>
                     <input type="text" class="form-control" placeholder="...">
-                  </div>
-                  <div class="input-group">
-                    <span class="input-group-addon bg-info">Enums:</span>
-                    <input type="text" class="form-control" placeholder="...">
-                  </div>
-                  <div class="input-group">
-                    <span class="input-group-addon bg-info">Functions:</span>
-                    <input type="text" class="form-control" placeholder="...">
-                  </div>
-                  <div class="input-group">
-                    <span class="input-group-addon bg-info">Attributes:</span>
-                    <input type="text" class="form-control" placeholder="...">
-                  </div>
-                  <div class="input-group">
-                    <span class="input-group-addon bg-info">Comments:</span>
-                    <input type="text" class="form-control" placeholder="...">
-                  </div>
+                  </div>                  
 
                   <div class="container-fluid">
 
